--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="about.css">
     <style>
 
     </style>
