Changed the event file

--- a/event.html
+++ b/event.html
@@ -55,7 +55,7 @@
 </div>
 
 <div class="bt">
-    <a href="extendevent.html">
+    <a href="eventdetail.html">
         <button type="button" class="btn btn-primary"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .8rem; --bs-btn-font-size: .75rem;">
     Know More
@@ -74,7 +74,7 @@
  <div class="line"><hr style="height:1px;border-width:0;color:black;background-color:black ;">
  </div>
  <div class="bt">
-    <a href="extendevent.html">
+    <a href="eventdetail.html">
         <button type="button" class="btn btn-primary"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .8rem; --bs-btn-font-size: .75rem;">
     Know More
@@ -92,7 +92,7 @@
  <div class="line"><hr style="height:1px;border-width:0;color:black;background-color:black ;">
  </div>
  <div class="bt">
-    <a href="extendevent.html">
+    <a href="eventdetail.html">
         <button type="button" class="btn btn-primary"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .8rem; --bs-btn-font-size: .75rem;">
     Know More
