--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <table cellspacing="10">
         <tr>
-            <td><img src="img/developer1.png.jpeg alt="Angela profile photo"></td>
+            <td><img src="img/developer1.png.jpeg" alt="Angela profile photo"></td>
             <td>
                 <h1>About Us</h1>
                 <h2>GOHackathon</h2>
