--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Go Hackathon</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
