--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
     <title>Gallery</title>
 </head>
 <body>
+    <h1>photos</h1>
+    <h2>hello</h2>
     <header class="header">
         <div class="Left">
     <img src ="GoHackathonLogo.jpg" width="100"height="40"><br>
