--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,7 +19,7 @@
         <img src="image/WhatsApp Image 2023-02-14 at 8.53.04 AM.png" class="theme-img">
         <div class="description">
             
-            <h3>LEADER BOARD</h3>
+            <h3>LEADER BOARDD</h3>
         </div>
             <table>
                 <thead>
