--- a/login1.html
+++ b/login1.html
@@ -17,7 +17,7 @@
           <form action="#" class="sign-in-form">
             <img src="logo.jpg" class="image" alt="" />
             <br>
-            <h2 class="title">Sign in</h2>
+            <h2 class="title">SIGN IN</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
               <input type="text" placeholder="Username" />
