--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Go Hackathon</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,11 +19,11 @@
                 <li><a href="#">CONTACT US</a></li>
             </ul>
         </nav>
-        <button class="button">Get Started</button>
+        <button class="btn btn-primary">Get Started</button>
         <button class="menu"
             onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
             aria-label="Main Menu">
-            <svg width="100" height="100" viewBox="0 0 100 100">
+            <svg width="60" height="60" viewBox="0 0 100 100">
                 <path class="line line1"
                     d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
                 <path class="line line2" d="M 20,50 H 80" />
@@ -39,6 +40,7 @@
             </h3>
         </div>
         <img src="img/img2.jpeg" />
+        <button class="btn btn-primary">Submit</button>
     </section>
 </body>
 
