Added changes file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </svg>
         </button>
     </header>
-    <section class="banner">
+    <!-- <section class="banner">
         <div>
             <h2>Go Hackathon</h2>
             <h3>
@@ -41,7 +41,7 @@
         </div>
         <img src="img/img2.jpeg" />
         <button class="btn btn-primary">Submit</button>
-    </section>
+    </section> -->
 </body>
 
 </html>
