--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         society.
                     </p>
                     <button class="btn btn-primary px-5 py-2 primary-btn">
-                        NOW MORE
+                        KNOW MORE
                     </button>
                 </div>
             </div>
