Add LinkedIn in footer

--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                     <div class="column text-light">
                         <i class="fab fa-facebook-f"></i>
                         <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
                         <i class="fab fa-twitter"></i>
                         <i class="fab fa-youtube"></i>
                     </div>
