--- a/index.html
+++ b/index.html
@@ -29,31 +29,43 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HACKATHONS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">COURSES</a>
+                            <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
                                 <a href="#" class="nav-link">EVENTS</a>
                                 <div class="dropdown-content">
-                                    <a href="#">CODING COMPETITIONS</a>
-                                    <a href="#">STARTUP</a>
+                                    <a href="#">LIVE EVENTS</a>
+                                    <a href="#">UPCOMMING EVENTS</a>
+                                    <a href="#">PAST EVENTS</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">HACKATHON</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LEADERBOARD</a>
+                                    <a href="#">PRACTICE SET</a>
+                                    <a href="#">PARTICIPANTS</a>
+                                    <a href="#">WINNERS</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#">GALLERY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                        <li>
+                            <button class="btn btn-success" id="login-btn">Login/Signup</button>
                         </li>
                     </ul>
                 </div>
