CSS changes in Nav

--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
     <link rel="stylesheet" href="./mobile-style.css">
 </head>
 
-<body>
+<body id="body">
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
                     <img src="img/logowithoutbg.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-light"></i>
-                </button>
+                
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
@@ -65,13 +62,13 @@
                             <a class="nav-link" href="#">CONTACT US</a>
                         </li>
                         <li>
-                            <button class="btn btn-success" id="login-btn">Login/Signup</button>
+                            <button class="btn btn-primary" id="login-btn">Login/Signup</button>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
-        <div class="container text-center">
+        <div class="container-hero">
             <div class="row">
                 <div class="col-md-7 col-sm-12  text-black">
                     <h6>BEST PLATFORM</h6>
