--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
             </div>
         </div>
     </header>
+    <!-- <div class="aboutimage">
+        <img src="img/developer1.jpeg" alt="developer1">
+    </div> -->
     <main>
         <section class="section-1">
             <div class="container text-center">
@@ -290,6 +293,21 @@
                 </div>
             </div>
         </section>
+        <!-- <section class="section-5">
+            <div class="vc_column-inner"> == $0
+                ::before
+                <div class="wpb_wrapper">
+                    <h2 style="text-align: center" class="vc_custom_heading">FAQ'S</h2>
+                    <div class="vc_tta-container" dat-vc-action="collapse">
+                        <div class="vc_general vc_tta vc_tta-tabs vc_tta-color-grey vc_tta-style-modern vc_tta-shape-rounded vc_tta-spacing-5 vc_tta-tabs-position-left vc_tta-controls-align-left">
+                            <div class="vc_tta-tabs-container"> 
+                                <ul class="vc_tta-tabs-list"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
     </main>
     <footer>
         <div class="container-fluid p-0">
