--- a/gallery.html
+++ b/gallery.html
@@ -14,10 +14,17 @@
       <div class="heading">
           
         <img src="arrow.jpg" alt="" > 
+      </div>
+      <div class="text">
         <h1>Gallery</h1>
-          </div>
-     
+      </div>
  <nav>
+    <div class="hamburger">
+        <div class="hamburger-menu">
+          <div class="hamburger-menu-line"></div>
+          <div class="hamburger-menu-line"></div>
+          <div class="hamburger-menu-line"></div>
+        </div>
     <ul class="nav-bar">
         <span class="menu">
             <li><a href="#">HOME</a></li>
