made changes in style.css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
-                    <img src="img/logowithoutbg.png" alt=""></a>
-                
+                    <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
@@ -62,41 +62,46 @@
                             <a class="nav-link" href="#">CONTACT US</a>
                         </li>
                         <li>
-                            <button class="btn btn-primary" id="login-btn">Login/Signup</button>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
-        <div class="container-hero">
-            <div class="row">
-                <div class="col-md-7 col-sm-12  text-black">
-                    <h6>BEST PLATFORM</h6>
-                    <h1>GO HACKATHON</h1>
-                    <p>
-                        Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                        nurture talent among budding tech professional.<br>
-                        We create an eco-system of industry academia partnership and help in continuous and
-                        sustainable development of innovative ideas, which are impactful for the growing economy and
-                        society.
-                    </p>
-                    <button class="btn btn-primary px-5 py-2 primary-btn">
-                        KNOW MORE
-                    </button>
-                </div>
+    </header>
+    <section class="section-0">
+        <div class="row">
+            <div class="col-md-7 col-sm-12  text-black">
+                <h6>BEST PLATFORM</h6>
+                <h1>GO HACKATHON</h1>
+                <p>
+                    Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    nurture talent among budding tech professional.<br>
+                    We create an eco-system of industry academia partnership and help in continuous and
+                    sustainable development of innovative ideas, which are impactful for the growing economy and
+                    society.Industry today is looking for talented students who are equipped and experience with
+                    advanced skills, software, attitude and updated industry best practices.<br>
+                    We create an eco-system of industry academia partnership and help in continuous and
+                    sustainable development of innovative ideas, which are impactful for the growing economy and
+                    society.
+                </p>
+                <button class="btn btn-primary px-5 py-2 primary-btn">
+                    NOW MORE
+                </button>
+            </div>
+            <div class="col-md-5 col-sm-12  h-25">
+                <img src="img/development2" alt="developer2" />
+
             </div>
         </div>
-    </header>
-    <!-- <div class="aboutimage">
-        <img src="img/developer1.jpeg" alt="developer1">
-    </div> -->
+    </section>
     <main>
         <section class="section-1">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-6 col-12">
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -159,7 +164,7 @@
                                     <h5 class="card-title">Web Designing</h5>
                                 </div>
                                 <p class="card-text">
-                                    Be a pro web developer. 
+                                    Be a pro web developer.
                                 </p>
                                 <div class="pricing">
                                     <h1>Web Designing</h1>
@@ -250,8 +255,7 @@
                             <div class="carousel-item active">
                                 <div class="card mr-2 d-inline-block shadow">
                                     <div class="card-img-top">
-                                        <img src="" class="img-fluid rounded-circle w-50 p-4"
-                                            alt="">
+                                        <img src="" class="img-fluid rounded-circle w-50 p-4" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">ABC College</h3>
