--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Dropdown Menu Bar</title>
+      <title>Gohackathon leaderboard</title>
       <link rel="stylesheet" href="leaderboard.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
