changes in leaderboard

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <tr>
             <td>
                 <h1>About Us</h1>
-                <h2>GOHackathon</h2>
+                <h2>Go Hackathon</h2>
                 <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                     nurture talent among budding tech professional.<br>
                     Industry today is looking for talented students who are equipped and experience with
