--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,6 +12,10 @@
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="leaderboard.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
    </head>
    <body>
 =======
@@ -41,7 +45,7 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <!-- <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME
+                            <a class="nav-link" href="#">LEADERBOARD
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li> -->
@@ -83,11 +87,6 @@
             </nav>
         </div>
     </header>
-<<<<<<< HEAD
-=======
-   
-    
->>>>>>> b977ca748e80954ba9e9ff4ed67b78f7cb1ddca3
     <div class="leaderboard">
         <div class="description">
             
@@ -143,6 +142,18 @@
                         <td><img src="img/5.jpg"><p>Nikhil</p></td>
                         <td>82</td>
                         <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td><img src="img/5.jpg"><p>ABC</p></td>
+                        <td>82</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td><img src="img/5.jpg"><p>XYZ</p></td>
+                        <td>82</td>
+                        <td>7</td>
                     </tr>
                 </tbody>
             </table>
