--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
       <div class="mask half">
         <div class="fill"></div>
       </div>
-      <div class="inside-circle"> 70% </div>
+      <div class="inside-circle"> 7th</div>
     </div>
   </div>
 		</div>
