Updated Header and Footer

--- a/event.html
+++ b/event.html
@@ -74,13 +74,13 @@
             <div class="collapse navbar-collapse" id="wbnav">
               <ul class="navbar-nav mr-auto" id="wbnav">
                 <li class="nav-itemsub">
-                  <a href="#" class="nav-link">Live Events</a>
+                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Live Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
-                  <a href="#" class="nav-link">Up coming Events</a>
+                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Up coming Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
-                  <a href="#" class="nav-link">Past Events</a>
+                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Past Events</a></button> 
                 </li>
             
               </ul>
@@ -105,7 +105,7 @@
               <p class="card-text">Agri-Business Idea Presentation
 
                 It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title">Hugs for bugs</h5>
               <p class="card-text">Develop and show your soft skills , which will be coupled with your coding skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
@@ -121,7 +121,7 @@
             <div class="card-body">
               <h5 class="card-title">Agriculture</h5>
               <p class="card-text">Innovation is taking two things that exist and putting them together in a new way..</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
@@ -129,33 +129,33 @@
             <div class="card-body">
               <h5 class="card-title">Hacks for Code</h5>
               <p class="card-text">There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
-              <p class="card-text"><small class="text-muted">Last updated 30 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="img2.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Krishi Vikalp</h5>
+              <h5 class="card-title">Ideathon</h5>
               <p class="card-text">Agri-Business Idea Presentation
 
                 It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="img.png" alt="Card image cap" height="190px">
             <div class="card-body">
-              <h5 class="card-title">Hugs for bugs</h5>
+              <h5 class="card-title">Hackathon</h5>
               <p class="card-text">Develop and show your soft skills , which will be coupled with your coding skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+             <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="img3.png" alt="Card image cap" height="190px">
             <div class="card-body">
-              <h5 class="card-title">Agriculture</h5>
+              <h5 class="card-title">Coding Competition</h5>
               <p class="card-text">Innovation is taking two things that exist and putting them together in a new way..</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+             <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
           <div class="card">
@@ -163,46 +163,13 @@
             <div class="card-body">
               <h5 class="card-title">Hacks for Code</h5>
               <p class="card-text">There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
-              <p class="card-text"><small class="text-muted">Last updated 30 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img2.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Krishi Vikalp</h5>
-              <p class="card-text">Agri-Business Idea Presentation
-
-                It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Hugs for bugs</h5>
-              <p class="card-text">Develop and show your soft skills , which will be coupled with your coding skills</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img3.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Agriculture</h5>
-              <p class="card-text">Innovation is taking two things that exist and putting them together in a new way..</p>
-              <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img4.cms" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Hacks for Code</h5>
-              <p class="card-text">There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
-              <p class="card-text"><small class="text-muted">Last updated 30 mins ago</small></p>
+              <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <footer>
         <div class="container-fluid p-0">
             <div class="row text-left">
