--- a/gallery.html
+++ b/gallery.html
@@ -2,63 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="gallery.css">
-<<<<<<< HEAD
-   
-    <title>Gallery</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Go Hackathon</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Style.css" />
+    <link rel="stylesheet" href="./mobile-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-<body>
-    <header>
-=======
-    <title>Gallery</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
-
+<body id="body">
     <header>
-
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                    <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
-<<<<<<< HEAD
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-=======
-                    <img src="img/logowithoutbg.png" alt=""></a>
-                <a href="#" class="back-link">
-                    <span class="back-icon">&larr;</span>
-                </a>
-                <div class="heading">
-
-                    <img src="arrow.jpg" alt="">
-                </div>
-                <div class="text">
-                    <h1>Gallery</h1>
-                </div>
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-<<<<<<< HEAD
                         <li class="nav-item active">
                             <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-=======
-                        <!-- <li class="nav-item active">
-                          <a class="nav-link" href="#">HOME
-                              <span class="sr-only">(current)</span>
-                          </a>
-                      </li> -->
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
@@ -89,21 +64,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">CONTACT US</a>
                         </li>
-<<<<<<< HEAD
-                
-=======
                         <li>
-                            <button class="btn btn-primary" id="login-btn">Login/Signup</button>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
                         </li>
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
                     </ul>
                 </div>
             </nav>
         </div>
-<<<<<<< HEAD
     </header>
- <br>
- <br>
+
     </head>
 <Span>
 <button class="my-button">Recent</button>
@@ -165,7 +134,7 @@
                 </div>
             </div>
         </div>
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
+
     </div>
     <footer>
         <div class="container-fluid p-0">
@@ -208,13 +177,6 @@
             </div>
         </div>
     </footer>
-<<<<<<< HEAD
-    
-=======
-
-
-
->>>>>>> 7f8f719f57e4ebb847167bb86508d94c5b8ec767
 </body>
 
 </html>
