Cards edited , images aligned in a folder

--- a/event.html
+++ b/event.html
@@ -99,7 +99,7 @@
         <div class="card-deck">
 
           <div class="card">
-            <img class="card-img-top" src="img2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="/img/img2.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Krishi Vikalp</h5>
               <p class="card-text">Agri-Business Idea Presentation
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img.png" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img.png" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Hugs for bugs</h5>
               <p class="card-text">Bugs finding skills to enhance problem solving ability. Develop and show your soft skills , which will be coupled with your coding skills</p>
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img3.png" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img3.png" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Agriculture</h5>
               <p class="card-text">Innovative ideas for new and better agriculture management system. Innovation is taking two things that exist and putting them together in a new way.</p>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img4.cms" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img4.cms" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Hacks for Code</h5>
               <p class="card-text">This will help you find out the best solutions for your algorithm. There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img5.png" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img5.png" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Ideathon</h5>
               <p class="card-text">Agri-Business Idea Presentation
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img7.jpeg" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img7.jpeg" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Hackathon</h5>
               <p class="card-text">The goal of a hackathon is to create functioning software or hardware by the end of the event. Develop and show your soft skills , which will be coupled with skills</p>
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img6.jpeg" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img6.jpeg" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Coding Competition</h5>
               <p class="card-text">Bits, Please! Think. Code. Innovate.Value the process. Innovation is taking two things that exist and putting them together in a new way..</p>
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="img8.png" alt="Card image cap" height="190px">
+            <img class="card-img-top" src="/img/img8.png" alt="Card image cap" height="190px">
             <div class="card-body">
               <h5 class="card-title">Samadhan</h5>
               <p class="card-text">This event brings problem statements to different teams from across the country, the teams are given specific problem statements for which they develop solutions. </p>
