Made a new page for past events named as past.html

--- a/event.html
+++ b/event.html
@@ -74,13 +74,13 @@
             <div class="collapse navbar-collapse" id="wbnav">
               <ul class="navbar-nav mr-auto" id="wbnav">
                 <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Live Events</a></button> 
+                    <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
                     <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Up coming Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Past Events</a></button> 
+                    <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
                 </li>
             
               </ul>
@@ -161,7 +161,7 @@
           <div class="card">
             <img class="card-img-top" src="/img/img8.png" alt="Card image cap" height="190px">
             <div class="card-body">
-              <h5 class="card-title">Samadhan</h5>
+              <h5 class="card-title">Solutions</h5>
               <p class="card-text">This event brings problem statements to different teams from across the country, the teams are given specific problem statements for which they develop solutions. </p>
               <button type="button" class="btn btn-primary btn-sm">Details</button>
             </div>
