--- a/index.html
+++ b/index.html
@@ -25,50 +25,58 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-align-right text-light"></i>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="about.html">ABOUT US</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <div class="dropdown">
-                                <a href="#" class="nav-link">EVENTS</a>
-                                <div class="dropdown-content">
-                                    <a href="#">LIVE EVENTS</a>
-                                    <a href="#">UPCOMMING EVENTS</a>
-                                    <a href="#">PAST EVENTS</a>
-                                </div>
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <div class="mr-auto"></div>
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">HOME
+                                            <span class="sr-only">(current)</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="about.html">ABOUT US</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <div class="dropdown">
+                                            <a href="event.html" class="nav-link">EVENTS</a>
+                                            <div class="dropdown-content">
+                                                <a href="#">LIVE EVENTS</a>
+                                                <a href="#">UPCOMMING EVENTS</a>
+                                                <a href="#">PAST EVENTS</a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <div class="dropdown">
+                                            <a href="event.html" class="nav-link">HACKATHON</a>
+                                            <div class="dropdown-content">
+                                                <a href="leaderboard.html">LEADERBOARD</a>
+                                                <a href="#">PRACTICE SET</a>
+                                                <a href="#">PARTICIPANTS</a>
+                                                <a href="leaderboard.html">WINNERS</a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="gallery.html">GALLERY</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACT US</a>
+                                    </li>
+                                    <li>
+                                        <button onclick="login.html" class="btn btn-primary px-5 py-2 primary-btn"
+                                            id="login-btn">Login/Signup</button>
+                                    </li>
+                                </ul>
                             </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <div class="dropdown">
-                                <a href="#" class="nav-link">HACKATHON</a>
-                                <div class="dropdown-content">
-                                    <a href="#">LEADERBOARD</a>
-                                    <a href="#">PRACTICE SET</a>
-                                    <a href="#">PARTICIPANTS</a>
-                                    <a href="#">WINNERS</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">GALLERY</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
-                        </li>
-                        <li>
-                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
-                        </li>
-                    </ul>
-                </div>
             </nav>
         </div>
     </header>
@@ -97,6 +105,9 @@
 
             </div>
         </div>
+    </section>
+    <section class="sponsors">
+        <img src="" alt="">
     </section>
     <main>
         <section class="section-1">
