changes in main page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     </li>
                                     <li class="nav-item dropdown">
                                         <div class="dropdown">
-                                            <a href="event.html" class="nav-link">EVENTS</a>
+                                            <a href="event.html" class="nav-link">EVENTS/HACKATHONS</a>
                                             <div class="dropdown-content">
                                                 <a href="#">LIVE EVENTS</a>
                                                 <a href="#">UPCOMMING EVENTS</a>
@@ -56,7 +56,7 @@
                                     </li>
                                     <li class="nav-item dropdown">
                                         <div class="dropdown">
-                                            <a href="event.html" class="nav-link">HACKATHON</a>
+                                            <a href="event.html" class="nav-link">EXPLORE MORE</a>
                                             <div class="dropdown-content">
                                                 <a href="leaderboard.html">LEADERBOARD</a>
                                                 <a href="#">PRACTICE SET</a>
@@ -72,8 +72,11 @@
                                         <a class="nav-link" href="#">CONTACT US</a>
                                     </li>
                                     <li>
+                                        <!-- <a href="login.html"></a>
                                         <button onclick="login.html" class="btn btn-primary px-5 py-2 primary-btn"
-                                            id="login-btn">Login/Signup</button>
+                                            id="login-btn"> Login/Signup</button>
+                                        </a> -->
+                                        <a href="login.html" class="btn btn-primary px-5 py-2 primary-btn" id="login-btn" role="button">Login/Signup</a>
                                     </li>
                                 </ul>
                             </div>
