--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
+          <form class="sign-in-form" action="index.html">
             <img src="img\logowithoutbg.png" class="image" alt="" />
             <br>
             <h2 class="title">SIGN IN</h2>
@@ -40,10 +40,10 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form">
+          <form  class="sign-up-form" action="index.html">
             <img src="img\logowithoutbg.png" class="image" alt="" />   
             <br>         
-            <h2 class="title">Sign up</h2>
+            <h2 class="title">SIGN UP</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
               <input type="text" placeholder="Username" />
@@ -125,7 +125,7 @@
             <button class="btn transparent" id="sign-in-btn">
               Sign in
             </button>
-            <br><br>
+            
             <!--  *Tried to add*
             <p class="social-text">Our social media handles</p>
             <div class="social-media">
