--- a/index.html
+++ b/index.html
@@ -21,71 +21,60 @@
 
 <body id="body">
     <header>
-        <div class="container-fluid p-0">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-light"></i>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                                <div class="mr-auto"></div>
-                                <ul class="navbar-nav">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="#">HOME
-                                            <span class="sr-only">(current)</span>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="about.html">ABOUT US</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <div class="dropdown">
-                                            <a href="event.html" class="nav-link">EVENTS/HACKATHONS</a>
-                                            <div class="dropdown-content">
-                                                <a href="#">LIVE EVENTS</a>
-                                                <a href="#">UPCOMMING EVENTS</a>
-                                                <a href="#">PAST EVENTS</a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <div class="dropdown">
-                                            <a href="event.html" class="nav-link">EXPLORE MORE</a>
-                                            <div class="dropdown-content">
-                                                <a href="leaderboard.html">LEADERBOARD</a>
-                                                <a href="#">PRACTICE SET</a>
-                                                <a href="#">PARTICIPANTS</a>
-                                                <a href="leaderboard.html">WINNERS</a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="gallery.html">GALLERY</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACT US</a>
-                                    </li>
-                                    <li>
-                                        <!-- <a href="login.html"></a>
-                                        <button onclick="login.html" class="btn btn-primary px-5 py-2 primary-btn"
-                                            id="login-btn"> Login/Signup</button>
-                                        </a> -->
-                                        <a href="login.html" class="btn btn-primary px-5 py-2 primary-btn" id="login-btn" role="button">Login/Signup</a>
-                                    </li>
-                                </ul>
+                            <a class="nav-link" href="#">HOME
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="about.html">ABOUT US</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">EVENTS</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LIVE EVENTS</a>
+                                    <a href="#">UPCOMMING EVENTS</a>
+                                    <a href="#">PAST EVENTS</a>
+                                </div>
                             </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">HACKATHON</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LEADERBOARD</a>
+                                    <a href="#">PRACTICE SET</a>
+                                    <a href="#">PARTICIPANTS</a>
+                                    <a href="#">WINNERS</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">GALLERY</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                        <li>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
-    <section class="section-0">
+<section class="section-0">
+    <div class="container">
         <div class="row">
-            <div class="col-md-7 col-sm-12  bannertext">
+            <div class="col-lg-7  bannertext">
                 <h6>BEST PLATFORM</h6>
                 <h1>GO HACKATHON</h1>
                 <p>
@@ -103,12 +92,13 @@
                     NOW MORE
                 </button>
             </div>
-            <div class="col-md-5 col-sm-12  h-25">
+            <div class="col-lg-5 bannerimage">
                 <img src="img/development2" alt="developer2" />
 
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <section class="sponsors">
         <img src="" alt="">
     </section>
