--- a/event.html
+++ b/event.html
@@ -105,7 +105,7 @@
               <p class="card-text">Agri-Business Idea Presentation
 
                 It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
+                <a href="detail.html"><button type="button" class="btn btn-primary btn-sm">Details</button></a>
             </div>
           </div>
           <div class="card">
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title">Hugs for bugs</h5>
               <p class="card-text">Bugs finding skills to enhance problem solving ability. Develop and show your soft skills , which will be coupled with your coding skills</p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
+              <a href="detail.html"><button type="button" class="btn btn-primary btn-sm">Details</button></a>
             </div>
           </div>
           <div class="card">
